--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,17 @@
         -webkit-text-stroke: 1px black;
         paint-order: stroke fill;
     }
+
+    /* ACCESIBILIDAD - FOCO */
+    :focus-visible {
+        outline: 3px solid #FE7021;
+        outline-offset: 2px;
+        border-radius: 4px;
+    }
+
+    button:focus-visible {
+        outline-color: #1a1a1a;
+    }
 }
 
 @keyframes infinite-scroll {
